--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -110,6 +110,16 @@ body {
 .order__submit:hover {
   border-radius: 4px;
 }
+.order__my{
+  width: fit-content;
+  padding: 12px;
+  border-radius: 10px;
+  color: var(--first);
+  transition: all 0.3s;
+  border: 1px solid white;
+  background: transparent;
+  cursor: default;
+}
 
 .order__box > * {
   margin: 0;
@@ -221,7 +231,6 @@ body {
 .create-order__input{
   padding: 10px;
 }
-
 .form__submit{
   font-size: 17px;
   border: none;
@@ -295,4 +304,28 @@ body {
 .xmark:hover > img {
   width: 100%;
   height: 100%;
+}
+.header__filters{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.filter__btn{
+  font-size: 14px;
+  border: none;
+  padding: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: var(--forth);
+  top: 1px;
+  left: 1px;
+  transition: all 0.2s;
+  position: relative;
+  color: white;
+}
+.filter__btn.active {
+  border: 1px solid white;
+  background: transparent;
+  cursor: default;
 }
