--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -107,6 +107,7 @@ body {
   background: var(--fifth);
   transition: all 0.3s;
 }
+
 .order__submit:hover {
   border-radius: 4px;
 }
@@ -143,21 +144,29 @@ body {
     width: 80%;
   }
 }
-.order__ui{
+.order__info{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: start;
 }
-.order__ui > * {
+.order__info > * {
   margin: 0;
 }
 
-.order__ui > p{
+.order__info > p{
   font-size: 16px;
 }
-.order__ui > p > span {
+.order__info > p > span {
   font-weight: 700;
+}
+
+.order__ui {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* ------Account----- */
@@ -237,7 +246,7 @@ body {
   padding: 15px;
   border-radius: 8px;
   cursor: pointer;
-  background-color: var(--forth);
+  background-color: var(--fifth);
   top: 1px;
   left: 1px;
   transition: all 0.2s;
@@ -253,7 +262,7 @@ body {
   padding: 10px;
   font-size: 16px;
 }
-
+.modal-order__box,
 .create-order__box{
   top: 0;
   left: 0;
@@ -276,7 +285,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-color: var(--third);
+  background-color: var(--forth);
   border-radius: 16px;
 }
 
@@ -328,4 +337,138 @@ body {
   border: 1px solid white;
   background: transparent;
   cursor: default;
+}
+
+.order {
+  position: relative;
+  width: 400px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  gap: 10px;
+  background-color: var(--forth);
+  border-radius: 10px;
+}
+.order * {
+  margin: 0;
+}
+.order > h2{
+  align-self: center;
+}
+.order > p {
+  font-size: 18px;
+}
+
+.order span {
+  font-weight: 700;
+}
+
+.modal-order__employee-box {
+  display: flex;
+  align-items: center ;
+  flex-direction: column;
+}
+.modal-order__employee-box p {
+  font-size: 20px;
+}
+.modal-order__creator-box {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.modal-order__creator-box h3 {
+  font-size: 20px;
+  align-self: center;
+}
+.model-order__employee {
+  font-size: 18px;
+}
+.account__window {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.37);
+  display: flex;
+  justify-content: end;
+}
+.account__box {
+  height: 100%;
+  width: 400px;
+  padding: 40px 20px;
+  box-sizing: border-box;
+  background-color: var(--forth);
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+.transfer__array {
+  display: flex;
+  overflow-y: scroll;
+  flex-direction: column;
+  align-items: center;
+}
+.transfer__array::-webkit-scrollbar{
+  width: 5px;
+  background-color: var(--fifth);
+}
+.transfer__array::-webkit-scrollbar-thumb{
+  width: 5px;
+  border-radius: 2px;
+  background-color: var(--second);
+}
+.transfer__header {
+  font-size: 20px;
+  align-self: flex-start;
+}
+.account__name {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.account__name > * {
+  margin: 0;
+}
+.account__submit{
+  font-size: 14px;
+  border: none;
+  padding: 10px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: var(--fifth);
+  transition: all 0.2s;
+  position: relative;
+  color: white;
+}
+
+.account__submit:hover {
+  border-radius: 5px;
+}
+
+.account__submit:disabled {
+  border: 1px solid white;
+  background: transparent;
+  cursor: default;
+}
+.account__buy{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.account__input {
+  padding: 8px;
+  border: 1px solid gray;
+  font-size: 15px;
+  border-radius: 4px;
+  width: 100px;
+  text-align: center;
+}
+
+.transfers {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
